--- a/static/css/header.css
+++ b/static/css/header.css
@@ -8,7 +8,7 @@
     align-items: center;
     justify-content: space-between;
     height: 100%;
-    padding: 8px 24px 0;
+    padding: 0 24px;
     width: 100%;
 }
 
