--- a/static/css/help.css
+++ b/static/css/help.css
@@ -12,8 +12,11 @@
 
 .help-container {
     display: flex;
-    height: 100%;
+    height: calc(100% + 1px);
     overflow: hidden;
+    background-color: var(--bg-primary);
+    margin-top: -1px;
+    padding-top: 1px;
 }
 
 /* Help Sidebar */
@@ -30,7 +33,7 @@
 }
 
 .help-sidebar-header {
-    padding: 20px 20px 16px;
+    padding: 12px 20px 16px;
     border-bottom: 1px solid var(--border-color);
 }
 
